# simply-pytorch

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml
examples/: README_BENCHMARK.md  __init__.py  analyze_results.py  basic_usage.py  language_model_benchmark.py
github/workflows/: publish.yml
simply_pytorch/: __init__.py  optimizers.py  utils.py
tests/: __init__.py  test_language_model_benchmark.py  test_optimizers.py
