[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simply-pytorch"
version = "0.1.0"
description = "PyTorch port of Simply optimizers with Cautious Weight Decay support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Simply PyTorch Contributors"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "einops>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/gdevos010/simply-pytorch"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]
examples = [
    "torchvision>=0.15.0",
]
benchmark = [
    "lightning>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "wandb>=0.15.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "seaborn>=0.12.0",
]

[tool.setuptools]
packages = {find = {}}

