[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simply-pytorch"
version = "0.1.0"
description = "PyTorch port of Simply optimizers with Cautious Weight Decay support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Simply PyTorch Contributors"}
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence :: Optimizers",
]
dependencies = [
    "torch>=2.0.0",
    "einops>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/gdevos010/simply-pytorch"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "wandb>=0.15.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "seaborn>=0.12.0",
]

[tool.setuptools]
packages = {find = {}}

